# telegram-dice-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml
.github/workflows/: release.yml
src/: bot.rs  main.rs  types.rs
