[package]
name = "telegram-dice-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
teloxide = { version = "0.15.0", features = ["macros", "rustls"], default-features = false }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
regex = "1.11.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
ahash = "0.8.12"
getrandom = "0.3.3"
